# clappen

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: continuous-integration.yml
examples/: clappen_template_impl.rs  paste.rs
src/: helper.rs  lib.rs
src/clappen/: attrs.rs  mod.rs
src/clappen_command/: attrs.rs
src/clappen_impl/: attrs.rs  item_impl.rs
src/clappen_impl_custom/: attrs.rs  item_impl.rs
src/clappen_impl_ignore/: mod.rs
src/clappen_into/: mod.rs
src/clappen_struct/: attrs.rs  item_struct.rs  mod.rs
src/clappen_template_impl/: attrs.rs  expansion.rs  mod.rs  template.rs
src/clappen_use/: mod.rs
src/helper/: mod.rs
tests/: cross_crate.rs  expandtest.rs  full.rs  full_default_prefix.rs  into.rs  into_nested.rs  into_prefix.rs  into_simple.rs  nested_into.rs  new_into_macro.rs  preserve_impl.rs  template_command.rs  template_from.rs  template_into.rs
tests/compile_only/gen_into/: into_no_prefix.fail.stderr
tests/cross-crate-fixture/: Cargo.toml
tests/cross-crate-fixture/src/: lib.rs
tests/expand/default/: flatten_without_prefix.pass.expanded.rs  nested_1_level.pass.expanded.rs  nested_2_level.pass.expanded.rs  preserve_impl.pass.expanded.rs  preserve_impl.pass.rs  struct_only.pass.expanded.rs
tests/expand/into/: basic.pass.expanded.rs  basic.pass.rs  into_nested.pass.expanded.rs  into_nested.pass.rs  (+4 more)
tests/into/: basic.pass.expanded.rs  basic.pass.rs  fail.rs  fail.stderr  nodefault.fail.expanded.rs  nodefault.fail.rs  nodefault.fail.stderr
tests/ui/: clappen_template_impl.toml
(+11 files in other folders)
